<resources>
    <string name="app_name">RDC shifts</string>
    <string name="shift_settings">Shifts settings</string>
    <string name="title_activity_shift_settings">Shift settings</string>
    <string name="shift_begin">Shift begin time</string>
    <string name="create_shift">Create shift</string>
    <string name="start_shift_time_hint">Start shift time</string>
    <string name="title_activity_shift_edit">edit shift</string>
    <string name="end_shift_time_hint">End shift time</string>
    <string name="edit_shift_start_time">Edit shift start time</string>
    <string name="edit_shift_end_time">Edit shift finish time</string>
    <string name="shift_full_name_hint">Shift full name</string>
    <string name="Shift_short_name_hint">Shift short name (max 2 letters)</string>
    <string name="edit_shift_color">Edit shift color</string>
    <string name="Use_alarm">Remind to set alarm before shift</string>
    <string name="edit_alarm_time">Edit alarm time</string>
    <string name="alarm_icon">Alarm_icon</string>
    <string name="color_select">Select a badge color</string>
    <string name="test">test</string>
    <string name="delete_btn">Delete</string>
    <string name="color">Color</string>
    <string name="dialog_shift_delete_title">Delete shift</string>
    <string name="dialog_shift_delete_message">Sure delete?  All this shifts in calendar will be make by holidays.</string>
    <string name="dialog_shift_positive_btn_text">Yes, delete</string>
    <string name="shift_added">Shift success added</string>
    <string name="shift_update">Shift update success</string>
    <string name="shift_delete">Shift delete success</string>
    <string name="date_string">Year- %d month- %d</string>
    <string name="shift_image">shift image</string>
    <string name="monday_short_text">Mon</string>
    <string name="tuesday_short_text">Tue</string>
    <string name="wednesday_short_text">Wed</string>
    <string name="thursday_short_text">Thu</string>
    <string name="friday_short_text">Fri</string>
    <string name="saturday_short_text">Sat</string>
    <string name="sunday_short_text">Sun</string>
    <string name="select_day_type">Select day type</string>
    <string name="day_type_holidays">Holiday :)</string>
    <string name="shifts_total">Shifts total:</string>
    <string name="title_activity_salary">Salary counter</string>
    <string name="name_salary">RDC salary</string>
    <string name="month_salary_header">Month salary is</string>
    <string name="median_gain">Median gain</string>
    <string name="hours_total">Hours total</string>
    <string name="shifts_in_aurora">shifts in Aurora</string>
    <string name="shifts_in_NV">Shifts in Nizhnevolzhskaya</string>
    <string name="hours_in_aurora">Hours in Aurora</string>
    <string name="hours_in_NV">Hours in NV</string>
    <string name="gain_total">Total gain</string>
    <string name="gain_aurora">Gain Aurora</string>
    <string name="gain_NV">Gain on Nizhnevolzhskaya</string>
    <string name="summ_for_hours">Summ for hours</string>
    <string name="summ_bounty">Summ bounty</string>
    <string name="contrasts_count">Contrasts count:</string>
    <string name="on_summ">on summ</string>
    <string name="dynamic_contrasts_count">Dynamic contrasts count</string>
    <string name="oncoscreenings_count">Oncoscreenings count</string>
    <string name="total_accrued">total_accrued</string>
    <string name="ndfl_text">Tax from</string>
    <string name="first_salary">To pay to first salary</string>
    <string name="cash_summ">Cash summ</string>
    <string name="cashless_summ">cashless summ</string>
    <string name="second_salary">To pay to second salary</string>
    <string name="zero" translatable="false">0</string>
    <string name="zero_cash" translatable="false">0 Р</string>
    <string name="select_month">Select month</string>
    <string name="dialog_choose_month">Choose a month</string>
    <string name="nav_header_desc" translatable="false">header image</string>
    <string name="salary">Salary</string>
    <string name="navigation_drawer_open" translatable="false">drawer open</string>
    <string name="navigation_drawer_close" translatable="false">drawer closed</string>
    <string name="schedule">Schedule</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="security">Security</string>
    <string name="schedule_setting_title">Schedule check time</string>
    <string name="revenue_for_this_day">Revenue for this day</string>
    <string name="dynamic_contrasts">Dynamic contrasts</string>
    <string name="contrasts">Contrasts</string>
    <string name="oncoscreenings">Oncoscreenings</string>
    <string name="shift_date">Shift date</string>
    <string name="select_a_center">Select a center</string>
    <string name="select_shift_duration">Select shift duration</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit_salary_day">Edit day</string>
    <string name="bounty_up_limit">Bounty up limit</string>
    <string name="pay_for_hour">Pay for hour (rubles)</string>
    <string name="normal_percent">Normal percent (%)</string>
    <string name="high_percent">High percent (%)</string>
    <string name="pay_for_contrast">Pay for contrast (rubles)</string>
    <string name="pay_for_dynamic_contrast">Pay for dynamic contrast(rubles)</string>
    <string name="os_show">Oncoscreenings show</string>
    <string name="pay_for_os">Pay for oncoscreening (rubles)</string>
    <string name="show_os_field">Show oncoscreenings field</string>
    <string name="os_hidden">Oncoscreenings field hidden</string>
    <string name="default_selected_center">Default selected center</string>
    <string name="day_registered_message">Day registered</string>
    <string name="no_salary">You have not salary this month</string>
    <string name="show_shifts">Show shifts</string>
    <string name="shift_notifications_channel">Shifts notifications</string>
    <string name="salary_notifications_channel">Salary notifications</string>
    <string name="salary_reminder">Salary remind</string>
    <string name="shifts_reminder">Shifts remind</string>
    <string name="add_salary_shortcut_long_label">Add salary</string>
    <string name="add_salary_shortcut_short_label">Add salary</string>
    <string name="count_salarys">Count salarys</string>
    <string name="use_pin">Use pin code</string>
    <string name="use_fingerprint">Use fingerprint</string>
    <string name="hint_enter_pin">Enter pin</string>
    <string name="dialog_start_scanning_hint">Put a finger on sensor</string>
    <string name="success_pin_enter">Success</string>
    <string name="wrong_fingerprint_action">Fingerprint not allowed</string>
    <string name="reenter_pin">Reenter pin</string>
    <string name="hint_repeat_pin">Reenter pin</string>
    <string name="text_error_message">Pin not equal</string>
    <string name="error_auth_message">Error auth!</string>
    <string name="need_authentication">Need authentication</string>
    <string name="menu_save">Save</string>
    <string name="close_action">close</string>
    <string name="delete_action">delete</string>
    <string name="details">details</string>
    <string name="debet_title">Debet</string>
    <string name="middle_title">Median gain</string>
    <string name="total_title">Salary</string>
    <string name="about_app">About app</string>
    <string name="salary_tab_name">Salary</string>
    <string name="my_underlined_email" translatable="false"><u>eldorianwin@gmail.com</u></string>
    <string name="contributor_name">Developer: Sergey Kirillov</string>
    <string name="app_version">App version is: %s</string>
    <string name="my_email" translatable="false">eldorianwin@gmail.com</string>
    <string name="mail_me_tittle">Send Email</string>
    <string name="mail_subject">Review on RDC Tools</string>
    <string name="oncoscreening_settings_unlock">Oncoscreening settings unlocked!</string>
    <string name="oncoscreening_settings_already_unlock">Not needed. Unlocked yet</string>
    <string name="notification_set_alarm">set alarm</string>
    <string name="alarm_set_toast">Alarm is enabled!</string>
    <string name="widget_test_text" translatable="false">test</string>
    <string name="my_widget_name">Salary widget</string>
    <string name="applogo">appLogo</string>
    <string name="update_file_name">RDC_tools</string>
    <string name="snackbar_found_update_message">Update found!</string>
    <string name="snackbar_update_action_message">Get it!</string>
    <string name="reserve">Reserve</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="permissions_dialog_title">Permissions required!</string>
    <string name="permissions_dialog_positive_answer">Accept</string>
    <string name="permissions_dialog_negative_answer">Deny</string>
    <string name="setting_success_restored_message">Settings restored, restart App</string>
    <string name="progress_dialog_title">Operation in progress</string>
    <string name="loading_dialog_message">Wait</string>
    <string name="backup_dialog_message">Creating backup</string>
    <string name="restore_dialog_message">Restore backup</string>
    <string name="load_shift_settings">Load shifts</string>
    <string name="loading_month_message">Loading month, wait</string>
    <string name="rights_required_message">Can\'t do operation without rights</string>
    <string name="sheet_loading_dialog_title">Load sheet</string>
    <string name="book_loading_dialog_message">Loading may be very long, please be patient</string>
    <string name="choose_person_dialog_title">Choose your name</string>
    <string name="choose_month_dialog_title">Choose month</string>
    <string name="no_sheet_error">No file found. Need be test.xlsx in download folder</string>
    <string name="month_found_dialog_title">Found month</string>
    <string name="found_month_message">Founded %s , fill it?</string>
    <string name="date_accept_message">Yes, it is</string>
    <string name="date_decline_message">No, choose from list</string>
    <string name="cant_found_person_message">Can\'t found person</string>
    <string name="confirm_person_dialog_title">Confirm person name</string>
    <string name="confirm_name_message">You select %s?</string>
    <string name="name_accept_message">Yes, it\'s me</string>
    <string name="decline_name_message">No, select again</string>
    <string name="person_saved_message">Person saved. You may reset it in preferences.</string>
    <string name="reset_name_settings">Reset name</string>
    <string name="name_reset_message">Saved name successfully reset</string>
    <string name="day_info_dialog_title">Day info</string>
    <string name="day_info_date">%d %s %d year</string>
    <string name="day_info_type_holiday">Holiday.</string>
    <string name="shift_begin_info">Shift begin in %s</string>
    <string name="shift_finish_info">Shift finish in %s</string>
    <string name="test_notifications_channel">Service notifications</string>
    <string name="test_reminder">Just service messages, nothing more</string>
    <string name="download_schedule_message">Downloading RDC schedule</string>
    <string name="sheet_download_error_message">Error download sheet file, maybe not Internet connection, try later</string>
    <string name="register_salary_message">Register salary</string>
</resources>
