<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/salary"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/salary_tab_name"/>
        <item
            android:id="@+id/schedule"
            android:icon="@drawable/ic_today_black_24dp"
            android:title="@string/schedule"
            android:enabled="false" />
    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />

        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about_app"/>
    </group>

</menu>