<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    android:layout_width="match_parent"
    >
<LinearLayout
    android:id="@+id/monthParent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/monday_short_text"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/tuesday_short_text"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/wednesday_short_text"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/thursday_short_text"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/friday_short_text"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/saturday_short_text"
            android:background="@color/colorHoliday"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@color/colorHoliday"
            android:text="@string/sunday_short_text"
            android:textSize="20sp"/>
    </LinearLayout>
<GridLayout
    android:id="@+id/calendarGridLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="7"
    >
</GridLayout>
    <Button
        android:id="@+id/autoloadShiftsButton"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/autofill_schedule_message"
        android:layout_height="wrap_content" />
    </LinearLayout>
    </ScrollView>