<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootView"
    tools:context=".ShiftEditActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fullTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/shift_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/shift_full_name_hint"
                    android:inputType="text"
                    android:maxLength="50" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/shortTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/fullTextLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/shift_short_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Shift_short_name_hint"
                    android:inputType="text"
                    android:maxLength="50" />
            </android.support.design.widget.TextInputLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shortTextLayout">

                <TableRow>

                    <Button
                        android:id="@+id/edit_shift_start_time_bnt"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:onClick="setTime"
                        android:text="@string/edit_shift_start_time"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/shift_start_time_view"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow>

                    <Button
                        android:id="@+id/edit_shift_finish_time_bnt"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:onClick="setTime"
                        android:text="@string/edit_shift_end_time"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/shift_finish_time_view"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow>

                    <Button
                        android:id="@+id/edit_shift_color_btn"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/edit_shift_color"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/edit_shift_color_view"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/shift_circle"
                        android:hint="@string/color"
                        android:inputType="text"
                        android:maxLength="7"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="Autofill" />
                </TableRow>

                <TableRow>

                    <Switch
                        android:id="@+id/alarmSwitcher"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="2"
                        android:text="@string/Use_alarm"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow>

                    <Button
                        android:id="@+id/set_alarm_time_btn"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:enabled="false"
                        android:onClick="setTime"
                        android:text="@string/edit_alarm_time"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/shift_alarm_time_view"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </TableRow>

            </TableLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="36dp"
        android:onClick="confirmSave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_check_white_24dp" />

</android.support.constraint.ConstraintLayout>